# solid-grinder

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-npm.js  foundry.toml  funding.json  package.json  remappings.txt
.github/workflows/: release.yml
cli/: decoder.rs  encoder.rs  main.rs  src_artifacts.rs  types.rs
cli/templates/: Decoder.g.sol.hbs  Encoder.g.sol.hbs
cli/templates/solc_0_7/: Encoder.g.sol.hbs
cli/templates/solc_0_8/: Decoder.g.sol.hbs
contracts/: AddressTable.sol
contracts/examples/uniswapv2/: UniswapV2Library.sol  UniswapV2Router02.sol  UniswapV2Router02_DataDecoder.sol  UniswapV2Router02_DataEncoder.sol  UniswapV2Router02_Optimized.sol
contracts/libraries/: BytesLib.sol
contracts/solc_0_7/: AddressTable.sol
contracts/solc_0_7/interfaces/: IAddressTable.sol
contracts/solc_0_7/libraries/: BytesLib.sol
contracts/solc_0_8/: AddressTable.sol
contracts/solc_0_8/interfaces/: IAddressTable.sol
npm/: binary-install.js  binary.js  install.js  package.json
optimized/decoder/: Decoder.g.sol  UniswapV2Router02_Decoder.g.sol
optimized/encoder/: UniswapV2Router02_Encoder.g.sol
src/: AddressTable.sol  DataDecode.sol  DataDecoding.sol  DataDecompress.sol
src/interfaces/: IAddressTable.sol
src/libraries/: BytesLib.sol
templates/solc_0_7/: Decoder.g.sol.hbs  Encoder.g.sol.hbs
templates/solc_0_8/: Encoder.g.sol.hbs
test/: AddressTable.t.sol  DataDecoder.t.sol  DataEncoder.t.sol
test/mock/: Mock_DataEncoder.sol
test/solc_0_7/: AddressTable.t.sol
test/solc_0_8/: AddressTable.t.sol
(+34 files in other folders)
